Add random color to buttons

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button {
     display: inline-block;
     width: calc(50% - 16px);
     max-width: 300px;
-    margin: 8px auto;
+    margin: 8px;
     padding: 16px 0;
     font-size: 20px;
     cursor: pointer;
@@ -26,7 +26,6 @@ button {
     color: white;
     border: none;
     border-radius: 5px;
-    box-sizing: border-box;
 }
 
 button:hover {
